--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         
         <div class="navbar" id="navbar">
             <div class="logo">
-                <h1>HNG</h1>
+                <h1>Adeyemi</h1>
             </div>
             <div class="nav">
                 <ul>
@@ -32,10 +32,10 @@
                 <p class="track">Frontend Developer</p>
                 <p data-testid="slackEmail" class="email">fathiaomolara02@gmail.com</p>
                 <p class="location">Lagos, Nigeria</p>
-                <p><a href="mailto:fathiaomolara02@gmail.com" target="_blank">Send a Mail</a></p>
-                <p><a href="https://github.com/Faateeha" target="_blank">Connect with me on Github</a></p>
-                <p><a href="http://linkedin.com/in/adeyemi-fathia-a73908270" target="_blank">Connect with me on Linkedin</a></p>
-                <p><a href="https://x.com/Adeyemi_fathia_">Connect with me on X</a></p>
+                <p><a href="mailto:fathiaomolara02@gmail.com" class="socials" target="_blank">Send a Mail</a></p>
+                <p><a href="https://github.com/Faateeha" class="socials" target="_blank">Connect with me on Github</a></p>
+                <p><a href="http://linkedin.com/in/adeyemi-fathia-a73908270" class="socials" target="_blank">Connect with me on Linkedin</a></p>
+                <p><a href="https://x.com/Adeyemi_fathia_" class="socials" target="_blank">Connect with me on X</a></p>
                 <div id="time" data-testid="currentTimeUTC"></div>
                 <div id="day" data-testid="currentDay"></div>
             </div>
